# pipelock-verify-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml  renovate.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  fuzz.yml  release.yml  scorecard.yml
fuzz/: receipt_fuzzer.py
pipelock_verify/: __init__.py  __main__.py  _canonical.py  _common.py  _directory.py  _evidence.py  _jcs.py  _verify.py
requirements/: ci.txt  fuzz.txt  pip.txt  release.txt
tests/: test_canonical.py  test_cli.py  test_conformance.py  test_directory.py  test_evidence.py  test_field_drift.py  test_regressions.py  test_v2_conformance.py
tests/conformance/: broken-chain.jsonl  invalid-signature.json  test-key.json  v2-test-keys.json  valid-chain.jsonl  valid-evidence-promote-committed.json  valid-evidence-proxy-decision.json  valid-evidence-shadow-delta.json  valid-single.json
