[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelock-verify"
version = "0.2.0"
description = "Verify Pipelock receipts: ActionReceipt v1 and EvidenceReceipt v2 (Ed25519-signed, chain-linked)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "PipeLab", email = "luckypipe@pipelab.org" },
]
keywords = [
    "pipelock",
    "agent-security",
    "receipt",
    "ed25519",
    "verifier",
    "ai-safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=47.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "mypy>=1.19.1",
]
release = [
    "build>=1.4.4",
    "twine>=6.2.0",
    "setuptools>=82.0.1",
    "wheel",
]

[project.urls]
Homepage = "https://pipelab.org"
Repository = "https://github.com/luckyPipewrench/pipelock-verify-python"
"Pipelock (Go reference)" = "https://github.com/luckyPipewrench/pipelock"
"Receipt Spec" = "https://pipelab.org/learn/action-receipt-spec/"

[project.scripts]
pipelock-verify = "pipelock_verify.__main__:main"

[tool.setuptools]
packages = ["pipelock_verify"]

[tool.setuptools.package-data]
pipelock_verify = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
